Only include main file and license in package

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "files": [
+    "index.js",
+    "LICENSE.md"
+  ],
   "author": "Brad Dougherty <me@brad.is>",
   "license": "MIT",
   "repository": {
